@@ -39,7 +39,7 @@ Test
 
 Warning: substr_compare(): The length must be greater than or equal to zero in %s on line %d
 bool(false)
-int(0)
+int(4)
 
 Warning: substr_compare() expects parameter 4 to be integer, string given in %s on line %d
 bool(false)
